# refscan

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-publish-image-to-ghcr.yml  build-and-publish-package-to-pypi.yml  check-source-code-format.yml  run-tests.yml
refscan/: __init__.py  grapher.py  refgraph.py  refscan.py  scanner.py
refscan/cli/: cli.py  graph.py  scan.py  version.py
refscan/lib/: Finder.py  Reference.py  ReferenceList.py  Violation.py  ViolationList.py  helpers.py
refscan/templates/: graph.template.html
tests/: test_Finder.py  test_Reference.py  test_ReferenceList.py  test_cli.py  test_grapher.py  test_helpers.py  test_refgraph.py  test_sanity.py  test_scanner.py
tests/schemas/: database_class.yaml  database_class_with_any_of.yaml  database_class_with_polymorphic_collections.yaml  database_with_class_uri.yaml  database_with_references.yaml  schema_with_abstract_class.yaml  schema_with_any_of.yaml  schema_with_class_uri.yaml
