# Reference: https://python-poetry.org/docs/pyproject/

[tool.poetry]
name = "refscan"
version = "0.0.0"
description = "Command-line program that scans the NMDC MongoDB database for referential integrity violations"
authors = []
readme = "README.md"
repository = "https://github.com/microbiomedata/refscan"
homepage = "https://github.com/microbiomedata/refscan"
documentation = "https://github.com/microbiomedata/refscan"
keywords = ["mongodb", "mongo", "relationships", "reference", "database", "data", "referential integrity", "scan"]

[tool.poetry.dependencies]
python = "^3.9"
# We use `linkml-runtime` to facilitate using `nmdc-schema`.
# Docs: https://linkml.io/linkml/developers/schemaview.html#linkml_runtime.utils.schemaview.SchemaView
linkml-runtime = "^1.7.5"
# We use `pymongo` to communicate with MongoDB servers.
# Docs: (https://pymongo.readthedocs.io/en/stable/
pymongo = "^4.7.1"
# We use `rich` to format console output.
# Docs: https://rich.readthedocs.io/en/stable/index.html
rich = "^13.7.1"
# We use `typer` as a CLI framework.
# Docs: https://typer.tiangolo.com/
typer = "^0.15.1"

[tool.poetry.group.dev.dependencies]
# We use `black` for code formatting.
# Usage: $ poetry run black --line-length 120 .
# Docs: https://black.readthedocs.io/en/stable/
black = "^24.4.2"
# We use `pyinstrument` for performance profiling.
# Usage: $ pyinstrument --from-path refscan --help
# Docs: https://pyinstrument.readthedocs.io/en/latest/guide.html#profile-a-python-cli-command
pyinstrument = "^4.6.2"
# We use `pytest` to run tests.
# Usage: $ poetry run pytest
# Docs: https://docs.pytest.org/en/stable/contents.html
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
# We use `mongomock` to test MongoDB interaction without involving a real MongoDB instance.
# Docs: https://github.com/mongomock/mongomock
mongomock = "^4.3.0"
# We use `mypy` to perform static type checking.
# Usage: $ poetry run mypy
# Docs: https://mypy.readthedocs.io/en/stable/
mypy = "^1.16.0"

[tool.poetry.scripts]
# Reference: https://python-poetry.org/docs/pyproject#scripts
# Reference: https://typer.tiangolo.com/tutorial/package/#add-a-script
refscan = "refscan.cli.cli:app"

[tool.pytest.ini_options]
# Make it so that, when someone runs `$ poetry run pytest`, in addition to running the tests, it also (a) runs doctests
# defined in Python modules, and (b) measures—via the `pytest-cov` plugin—test coverage within the `refscan` folder.
# Reference (a): https://docs.pytest.org/en/stable/how-to/doctest.html#how-to-run-doctests
# Reference (b): https://pytest-cov.readthedocs.io/en/latest/config.html#configuration
addopts = "--doctest-modules --cov=refscan"

[tool.black]
# Make it so that, when someone runs `$ poetry run black`, these default CLI options are used.
# Reference: https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format
line-length = 120

[tool.mypy]
# Make it so, when someone runs `$ poetry run mypy`, these default CLI options are used.
# Reference: https://mypy.readthedocs.io/en/stable/config_file.html
files = "."

[[tool.mypy.overrides]]
# Silence the following error:
# > Skipping analyzing "linkml_runtime": module is installed, but missing library stubs or py.typed marker  [import-untyped] 
#
# Note: We first tried using the following, but it seemed to have no effect on the behavior of mypy when run via `$ poetry run mypy`.
#       ```
#       [mypy-linkml_runtime]
#       ignore_missing_imports = true
#       ```
#       So, we—instead—used the syntax shown on: https://stackoverflow.com/a/74198016
#
module = "linkml_runtime"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
